--- a/ressources/style.css
+++ b/ressources/style.css
@@ -6,8 +6,8 @@
 
 @font-face
 {
-    font-family: 'Numans';
-    src: url('fonts/Numans/Numans-Regular.ttf') format('truetype');
+    font-family: 'Nunito-Regular';
+    src: url('fonts/Nunito/Nunito-Regular.ttf') format('truetype');
 }
 
 textarea {
@@ -18,13 +18,13 @@ textarea {
 
 #container-fluid {
 	margin: 50px 0px 0px 0px;
-	font-family: 'Numans', sans-serif;
+	font-family: 'Nunito-Regular', sans-serif;
 }
 
 /*menu du haut*/
 
 .nav_top {
-	background-color: #F28729;
+	background-color: black;
 	width: 100%;
 	height: 50px;
 }
@@ -32,23 +32,29 @@ textarea {
 .text_menu_top {
 	height: 100%;
 	padding-top: 15px;
+	font-family: 'Nunito-Regular', sans-serif;
+}
+
+.nav li a:hover {
+	text-decoration: none;
+	color: white;
+}
+
+.nav li a {
+	text-decoration: none;
+	color: white;
+}
+
+.nav_top li {
+	color: white;
+	text-shadow: none;
+	height: 100%;
+	font-size: 18px;
+	text-transform: uppercase;
 }
 
 .img_menu_top {
 	padding-top: 5px;
-}
-
-.nav_top li a:hover {
-	text-decoration: none;
-}
-
-.nav_top li p {
-	color: #3d3d3d;
-	text-shadow: none;
-	height: 100%;
-	vertical-align:middle;
-	font-size: 20px;
-	text-transform: uppercase;
 }
 
 #main_page {
@@ -62,9 +68,10 @@ textarea {
 	width: 200px;
 	float: left;
 	text-align: center;
-	background: #FFE0C0;
+	background: #DF5A49;
 	box-shadow: 1px 1px 12px #555;
 	overflow:auto;
+	font-size: 16px;
 }
 
 #page_right {
