--- a/ressources/style.css
+++ b/ressources/style.css
@@ -6,25 +6,35 @@
 
 @font-face
 {
-    font-family: 'Numans';
-    src: url('fonts/Numans/Numans-Regular.ttf') format('truetype');
+    font-family: 'Nunito-Regular';
+    src: url('fonts/Nunito/Nunito-Regular.ttf') format('truetype');
 }
 
 textarea {
 	resize : none;
 }
 
+.big_title {
+	margin: center;
+	text-align: center;
+	font-size: 60px;
+	padding: 20px 0px 30px 0px;
+}
+
+#test {
+	visibility: hidden;
+}
 /*General*/
 
 #container-fluid {
 	margin: 50px 0px 0px 0px;
-	font-family: 'Numans', sans-serif;
+	font-family: 'Nunito-Regular', sans-serif;
 }
 
 /*menu du haut*/
 
 .nav_top {
-	background-color: #F28729;
+	background-color: black;
 	width: 100%;
 	height: 50px;
 }
@@ -32,28 +42,33 @@ textarea {
 .text_menu_top {
 	height: 100%;
 	padding-top: 15px;
+	font-family: 'Nunito-Regular', sans-serif;
+}
+
+.nav li a:hover {
+	text-decoration: none;
+	color: white;
+}
+
+.nav li a {
+	text-decoration: none;
+	color: white;
+}
+
+.nav_top li {
+	color: white;
+	text-shadow: none;
+	height: 100%;
+	font-size: 18px;
+	text-transform: uppercase;
 }
 
 .img_menu_top {
 	padding-top: 5px;
 }
 
-.nav_top li a:hover {
-	text-decoration: none;
-}
-
-.nav_top li p {
-	color: #3d3d3d;
-	text-shadow: none;
-	height: 100%;
-	vertical-align:middle;
-	font-size: 20px;
-	text-transform: uppercase;
-}
-
 #main_page {
 	height: 650px;
-	width: 100%;
 }
 
 #menu_left {
@@ -62,21 +77,39 @@ textarea {
 	width: 200px;
 	float: left;
 	text-align: center;
-	background: #FFE0C0;
+	background: #DF5A49;
 	box-shadow: 1px 1px 12px #555;
 	overflow:auto;
+	font-size: 16px;
 }
 
 #page_right {
-	padding: 20px 20px 10px 30px;
 	height: 100%;
-	margin-left: 200px;
 	overflow: auto;
+}
+
+.page_right_padding {
+	padding: 20px 20px 10px 30px;
+}
+
+.login_registration_form {
+	background-color: #E35C4A;
+	color: black;
+	text-align: center;
+	margin: 0px 100px 0px 100px;
+}
+
+#page_connexion_color {
+	padding: 20px 20px 10px 30px;
+	background-color: #DF5A49;
+	color : white;
+	height: 100%;
+	padding-top: 50px;
 }
 
 footer {
 	box-shadow: 1px 1px 12px #555;
-	background: #073A59;
+	background: black;
 	color: white;
 	padding: 10px 10px 10px 10px;
 	margin-top: 30px;
