--- a/ressources/style.css
+++ b/ressources/style.css
@@ -14,6 +14,21 @@ textarea {
 	resize : none;
 }
 
+.box_content {
+	border-bottom: 1px solid black;
+	padding : 2px 2px 2px 5px;
+	margin : 5px 5px 10px 0px;
+	list-style-type:none;
+}
+
+.box_content:hover {
+	background-color: #DF5A49;
+	-webkit-transition: background-color 0.2s linear;
+	-moz-transition: background-color 0.2s linear;
+	-o-transition: background-color 0.2s linear;
+	transition: background-color 0.2s linear;
+}
+
 .big_title {
 	margin: center;
 	text-align: center;
@@ -21,9 +36,6 @@ textarea {
 	padding: 20px 0px 30px 0px;
 }
 
-#test {
-	visibility: hidden;
-}
 /*General*/
 
 #container-fluid {
