--- a/ressources/style.css
+++ b/ressources/style.css
@@ -15,14 +15,15 @@ textarea {
 }
 
 .box_content {
-	border-bottom: 1px solid black;
-	padding : 2px 2px 2px 5px;
-	margin : 5px 5px 10px 0px;
+	border-bottom: 1px solid #e3e3e3;
+	padding : 5px 2px 5px 5px;
+	margin : -10px 30px 10px 0px;
 	list-style-type:none;
 }
 
 .box_content:hover {
-	background-color: #DF5A49;
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
 	-webkit-transition: background-color 0.2s linear;
 	-moz-transition: background-color 0.2s linear;
 	-o-transition: background-color 0.2s linear;
@@ -111,7 +112,7 @@ textarea {
 	margin: 0px 100px 0px 100px;
 }
 
-#page_connexion_color {
+.page_connexion_color {
 	padding: 20px 20px 10px 30px;
 	background-color: #DF5A49;
 	color : white;
