--- a/ressources/style.css
+++ b/ressources/style.css
@@ -14,6 +14,10 @@ textarea {
 	resize : none;
 }
 
+.form_inline {
+	display : inline;
+}
+
 .box_content {
 	border-bottom: 1px solid #e3e3e3;
 	padding : 5px 2px 5px 5px;
