--- a/ressources/style.css
+++ b/ressources/style.css
@@ -36,7 +36,24 @@ textarea {
 
 .box_step {
 	padding : 5px 2px 5px 5px;
-	margin : 0px 30px 0px 0px;
+	margin : 0px 30px 0px -20px;
+	list-style-type:none;
+}
+
+.box_step_green:hover {
+	background-color: white;
+	border: 1px solid #e3e3e3;
+	-webkit-transition: background-color 0.2s linear;
+	-moz-transition: background-color 0.2s linear;
+	-o-transition: background-color 0.2s linear;
+	transition: background-color 0.2s linear;
+}
+
+.box_step_green {
+/*	background-color: #e0f0d5;
+	border: 1px solid #e3e3e3;*/
+	padding : 5px 2px 5px 5px;
+	margin : 0px 30px 0px -20px;
 	list-style-type:none;
 }
 
