--- a/ressources/style.css
+++ b/ressources/style.css
@@ -87,6 +87,7 @@ textarea {
 	padding : 5px 2px 5px 5px;
 	margin : 0px 30px 0px -20px;
 	list-style-type:none;
+	border-bottom: 1px solid #e3e3e3;
 }
 
 .box_advice:hover {
